--- a/src/tic-tac-toe.html
+++ b/src/tic-tac-toe.html
@@ -105,6 +105,14 @@
     RESET
   </div>
 </div>
+<div class="row">
+  <div class="mbl" id="lmb">
+    L MB
+  </div>
+  <div class="mbr" id="rmb">
+    L/R MB
+  </div>
+</div>
 <script src=tic-tac-toe.js></script>
 </body>
-  
+</html>
